<resources>
    <string name="app_name">ReservationSystem</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sing_in">Sing in</string>
    <string name="log_in">log_in</string>
    <string name="login">login</string>
    <string name="signin">signin</string>
    <string name="not_signed_in_yet_sign_in_here">Not signed in yet? Sign in here</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_reservation">Add reservation</string>
</resources>